--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,7 +7,7 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Malikov-Python Backend Developer Blogs">
     <meta name="keywords"
-          content="bootstrap, business, creative agency, mobile app showcase, saas, fintech, finance, online courses, software, medical, conference landing, services, e-commerce, shopping cart, multipurpose, shop, ui kit, marketing, seo, landing, blog, portfolio, html5, css3, javascript, gallery, slider, touch, creative">
+          content="bootstrap, business, creative agency, mobile app showcase, saas, fintech, finance, online courses, software, medical, conference landing, services, e-commerce, shopping cart, multipurpose, shop, ui kit, marketing, seo, landing, blog, portfolio, html5, css3, javascript, gallery, slider, touch, creative, blog">
     <meta name="author" content="Malikov Abdusamad">
     <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -142,21 +142,21 @@
         })();
     </script>
     <!-- Google Tag Manager -->
-    <script>
-        (function (w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            });
-            var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-WKV3GT5');
-    </script>
+    {#    <script>#}
+    {#        (function (w, d, s, l, i) {#}
+    {#            w[l] = w[l] || [];#}
+    {#            w[l].push({#}
+    {#                'gtm.start':#}
+    {#                    new Date().getTime(), event: 'gtm.js'#}
+    {#            });#}
+    {#            var f = d.getElementsByTagName(s)[0],#}
+    {#                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';#}
+    {#            j.async = true;#}
+    {#            j.src =#}
+    {#                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;#}
+    {#            f.parentNode.insertBefore(j, f);#}
+    {#        })(window, document, 'script', 'dataLayer', 'GTM-WKV3GT5');#}
+    {#    </script>#}
 </head>
 <!-- Body -->
 <body>
