--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -26,8 +26,8 @@
                         <a href="/" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
                            aria-current="page">About</a>
                         <ul class="dropdown-menu">
-                            <li><a href="/" class="dropdown-item">About me</a></li>
-                            <li><a href="/" class="dropdown-item">Projects</a></li>
+                            <li><a style="cursor: not-allowed" class="dropdown-item">About me</a></li>
+                            <li><a style="cursor: not-allowed" class="dropdown-item">Projects</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -115,10 +115,7 @@
                         <hr class="dropdown-divider2">
                         <li class="dropdown-item">
                             <div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4" data-bs-toggle="mode">
-                                {#                            <input type="checkbox" class="form-check-input" id="theme-mode">#}
-                                <label class="form-check-label d-sm-block btn btn-sm btn-outline-info" for="theme-mode">Light</label>
-                                <label class="form-check-label d-sm-block btn btn-sm btn-primary"
-                                       for="theme-mode">Dark</label>
+                                <label class="d-sm-block w-sm-100 btn btn-success btn-sm border-1" for="theme-mode">Switch theme</label>
                             </div>
                         </li>
                     </ul>
