--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -56,7 +56,7 @@
                                     <div class="col-sm-6 mb-4">
                                         <label for="id_old_password" class="form-label fs-base">Current password</label>
                                         <div class="password-toggle">
-                                            <input type="password" id="id_old_password" name="old_password" class="form-control form-control-lg" required>
+                                            <input type="password" id="id_old_password" name="old_password" class="form-control form-control-lg" placeholder="********" required>
                                             <label class="password-toggle-btn" aria-label="Show/hide password">
                                             <input class="password-toggle-check" type="checkbox">
                                             <span class="password-toggle-indicator"></span>
@@ -69,7 +69,7 @@
                                     <div class="col-sm-6 mb-4">
                                         <label for="id_new_password1" class="form-label fs-base">New password</label>
                                         <div class="password-toggle">
-                                            <input type="password" id="id_new_password1" name="new_password1" autocomplete="new-password" class="form-control form-control-lg" required>
+                                            <input type="password" id="id_new_password1" name="new_password1" autocomplete="new-password" class="form-control form-control-lg" placeholder="********" required>
                                             <label class="password-toggle-btn" aria-label="Show/hide password">
                                             <input class="password-toggle-check" type="checkbox">
                                             <span class="password-toggle-indicator"></span>
@@ -80,7 +80,7 @@
                                     <div class="col-sm-6 mb-4">
                                         <label for="id_new_password2" class="form-label fs-base">Confirm new password</label>
                                         <div class="password-toggle">
-                                            <input type="password" id="id_new_password2" name="new_password2" autocomplete="new-password" class="form-control form-control-lg" required>
+                                            <input type="password" id="id_new_password2" name="new_password2" autocomplete="new-password" class="form-control form-control-lg" placeholder="********" required>
                                             <label class="password-toggle-btn" aria-label="Show/hide password">
                                             <input class="password-toggle-check" type="checkbox">
                                             <span class="password-toggle-indicator"></span>
