--- a/templates/home.html
+++ b/templates/home.html
@@ -44,8 +44,8 @@
                                 <span class="fs-sm">{{ hot.comments.all.count }}</span>
                             </div>
                             <div class="d-flex align-items-center opacity-70">
-                                <i class="bx bx-share-alt fs-lg me-1"></i>
-                                <span class="fs-sm">2</span>
+                                <i class="bx bx-bookmark-alt fs-lg me-1"></i>
+                                <span class="fs-sm">{{ hot.savers.all.count }}</span>
                             </div>
                         </div>
                     </div>
@@ -94,8 +94,8 @@
                                                         <span class="fs-sm">{{ post.comments.all.count }}</span>
                                                     </div>
                                                     <div class="d-flex align-items-center">
-                                                        <i class="bx bx-share-alt fs-lg me-1"></i>
-                                                        <span class="fs-sm">2</span>
+                                                        <i class="bx bx-bookmark-alt fs-lg me-1"></i>
+                                                        <span class="fs-sm">{{ post.savers.all.count }}</span>
                                                     </div>
                                                 </div>
                                             </article>
