--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -164,7 +164,7 @@
                             <ul class="nav flex-column fs-sm">
                                 <li class="nav-item mb-1">
                                     <a href="#" class="nav-link py-1 px-0 active">All topics <span
-                                            class="fw-normal opacity-60 ms-1">({{ posts.count }})</span></a>
+                                            class="fw-normal opacity-60 ms-1">({{ numbers }})</span></a>
                                 </li>
                                 {% for cat in categories %}
                                     <li class="nav-item mb-1">
