--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -32,7 +32,7 @@
                         <span class="fs-sm">{{ post.comments.all.count }}</span>
                     </div>
                     <div class="d-flex align-items-center">
-                        <i class="bx bx-share-alt fs-base me-1"></i>
+                        <i class="bx bx-bookmark-alt fs-base me-1"></i>
                         <span class="fs-sm">2</span>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                 <img src="{{ post.author.image.url }}" class="rounded-circle" width="60" alt="Avatar">
                 <div class="ps-3">
                     <h6 class="mb-1">Author</h6>
-                    <a href="#"
+                    <a
                        class="fw-semibold stretched-link">{{ post.author.first_name }} {{ post.author.last_name }}</a>
                 </div>
             </div>
