Title for everypage

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block title %}Page not found{% endblock %}
 {% block content %}
             <!-- BG light version -->
             <div class="d-dark-mode-none position-absolute top-0 start-0 w-100 h-100 bg-repeat-0 bg-position-center bg-size-cover" style="background-image: url({% static 'img/404/light/bg.jpg' %});"></div>
