--- a/templates/account-details.html
+++ b/templates/account-details.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block title %}Account details{% endblock %}
 {% block content %}
     <!-- Page content -->
     <section class="container pt-5">
