--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block title %}Get in Touch{% endblock %}
 {% block content %}
     <!-- Page content -->
     <section class="container pb-5 mb-lg-4 mb-xl-5">
