--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block title %}{{ post.title }}{% endblock %}
 {% block content %}
     <!-- Breadcrumb -->
     <nav class="container pt-4 mt-lg-3" aria-label="breadcrumb">
