--- a/templates/account-saved-items.html
+++ b/templates/account-saved-items.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block title %}Saved Items{% endblock %}
 {% block content %}
     <!-- Page content -->
     <section class="container pt-5">
