--- a/templates/category_posts.html
+++ b/templates/category_posts.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block title %}Category: {{ cat_post }}{% endblock %}
 {% block content %}
     <!-- Breadcrumb -->
     <nav class="container mt-lg-4" aria-label="breadcrumb">
