--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% block title %}Post list{% endblock %}
 {% block content %}
     <!-- Breadcrumb -->
     <nav class="container mt-lg-4" aria-label="breadcrumb">
