--- a/templates/home.html
+++ b/templates/home.html
@@ -148,14 +148,21 @@
                             <article class="card border-0 h-100 mx-1">
                                 <div class="position-relative">
                                     <form action="{% url 'save_post' post.pk %}" method="post">{% csrf_token %}
-
                                         <a class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
                                            data-bs-toggle="tooltip" data-bs-placement="left"
                                            title="Read later">
-                                            <button mt-0 type="submit" class="btn btn-link" value="{{ post.id }}"
-                                                    name="post_id">
-                                                <i class="bx bx-bookmark" style="color: black"></i>
-                                            </button>
+                                            {% if user in post.savers.all %}
+                                                <button mt-0 type="submit" class="btn btn-link" value="{{ post.id }}"
+                                                        name="post_id">
+                                                    <i class="bx bxs-bookmark"
+                                                       style="color: black; font-size: 25px"></i>
+                                                </button>
+                                            {% else %}
+                                                <button mt-0 type="submit" class="btn btn-link" value="{{ post.id }}"
+                                                        name="post_id">
+                                                    <i class="bx bx-bookmark" style="color: black; font-size: 25px"></i>
+                                                </button>
+                                            {% endif %}
                                         </a>
                                     </form>
                                     <img src="{{ post.thumbnail.url }}" class="card-img-top" alt="Image">
@@ -220,10 +227,18 @@
                                 <a class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
                                    data-bs-toggle="tooltip" data-bs-placement="left"
                                    title="Read later">
-                                    <button mt-0 type="submit" class="btn btn-link" value="{{ post.id }}"
-                                            name="post_id">
-                                        <i class="bx bx-bookmark" style="color: black"></i>
-                                    </button>
+                                    {% if user in post.savers.all %}
+                                        <button mt-0 type="submit" class="btn btn-link" value="{{ post.id }}"
+                                                name="post_id">
+                                            <i class="bx bxs-bookmark"
+                                               style="color: black; font-size: 25px"></i>
+                                        </button>
+                                    {% else %}
+                                        <button mt-0 type="submit" class="btn btn-link" value="{{ post.id }}"
+                                                name="post_id">
+                                            <i class="bx bx-bookmark" style="color: black; font-size: 25px"></i>
+                                        </button>
+                                    {% endif %}
                                 </a>
                             </form>
                         </div>
